tests/paczka1/fuzzy1/32310550.err
Error in line 3: bXkeq S898 48,7
Error in line 14: xoIRA A711 96,5
Error in line 18: J8aO A357 12,6
Error in line 22: 68g0sCNslc S898 18,6
Error in line 25: 68g0sCNslc A357 0,1
Error in line 32: J8aO A357 36,0
Error in line 23: A527 A711 20,6
